# theater-mcp

./: ADOPTION_PLAN.md  Cargo.toml  INTEGRATION_SUMMARY.md  README.md  SPECIFICATION.md  apply_fixes.sh  config.json  fix_plan.md  implementation_plan.md  note.md  run_hello_world_test.sh
changes/: server_with_heartbeat.rs  theater_client_with_reconnection.rs
changes/theater_reconnection/: README.md  actor_resources_improved.rs  actor_tools_improved.rs  test_reconnection.sh  theater_reconnection_change_request.md
examples/: README.md  hello_world_client.rs  resource_client.rs  simple_client.rs  test_resources.rs
src/: lib.rs  main.rs  server.rs
src/resources/: actors.rs  actors.rs.new  actors_new.rs  events.rs  events.rs.new  events_new.rs  mod.rs
src/theater/: client.rs  client_new.rs  mod.rs  tests.rs  types.rs  types_new.rs
src/tools/: actor.rs  actor.rs.new  actor_new.rs  channel.rs  channel_new.rs  message.rs  message_new.rs  mod.rs  utils.rs
