[package]
name = "theater-mcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# MCP dependencies
mcp-protocol = { path = "/Users/colinrozzi/work/rust-mcp/mcp-protocol" }
mcp-server = { path = "/Users/colinrozzi/work/rust-mcp/mcp-server" }

# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
futures = "0.3"
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
url = "2.3"
chrono = "0.4"

[lib]
name = "theater_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "theater-mcp-server"
path = "src/main.rs"
